public/css/app.css
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

body {
  padding-top: 50px;
  padding-bottom: 40px;
  background: #F0F0F0;
}

.main {
  padding-top: 20px;
}


/* CUSTOMIZE THE HEADER
-------------------------------------------------- */
header {

}


/* CUSTOMIZE THE FOOTER
-------------------------------------------------- */
footer {
  padding-left: 50px;
  padding-right: 50px;
}


/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */

/* Special class on .container surrounding .navbar, used for positioning it into place. */
.navbar-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 20;
}

/* Flip around the padding for proper display in narrow viewports */
.navbar-wrapper .container {
  padding-left: 0;
  padding-right: 0;
}
.navbar-wrapper .navbar {
  padding-left: 15px;
  padding-right: 15px;
}

ul.navbar-nav a.button-href-wrapper {
  padding-top: 8px;
  padding-bottom: 8px;
}

.navbar {
  background: #404040;
}

.navbar-toggle {
  display: none;
}

/* GAMES CONTENT
-------------------------------------------------- */

/* Pad the edges of the mobile views a bit */
.games {
  color: #707070;
  display:flex;
}

/* Center align the text within the three columns below the carousel */
.game {
  text-align: center;
  margin-bottom: 11px;
  background-color: #FFFFFF;
  border-radius: 6px;
  min-height: 160px;
}

/* Score */
.score, .dash {
  display: inline-block;
}
.dash {
  padding-bottom: 12px;
}
.scores {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 100%;
}
.scores > * {
  vertical-align: middle;
}
.scoresText {
  display: none; /*inline*/
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 100%;
}

.games h2 {
  font-weight: normal;
  font-size: 24px;
}

.games p {
  font-size: 14px;
}

.col-sm-3 {
  margin-left: 5px;
  margin-right: 5px;
  width: 24%;
}
.col-sm-4 {
  margin-left: 5px;
  margin-right: 5px;
  width: 32.3%;
}
.col-sm-6 {
  margin-left: 5px;
  margin-right: 5px;
  width: 48.9%;
}
.col-sm-12 {
  margin-left: 5px;
  margin-right: 5px;
  width: 98.6%;
}



/* LIVEFYRE COMMENTS
-------------------------------------------------- */

#livefyre-comments {
  background: white;
  padding: 15px;
  border-radius: 6px;
  margin-bottom: 10px;
}



/* BETS
-------------------------------------------------- */

.bets {
  padding-left: 0px;
  padding-right: 0px;
}

.bets .table {
  background-color: #FFFFFF;
  font-size: 18px;
  color: #787878;
}

.bets .table td, th {
  height: 62px;
}

.bets .table th {
  text-align: center;
  font-size: 24px;
  vertical-align: middle;
}

.bets .table td {
  text-align: left;
  vertical-align: middle;
}

.bets .table td:last-child {
  font-weight: bold;
}

.bets .table td:first-child {
  text-align: center;
}​

.table-curved {
    border-collapse: separate;
}
.table-curved {
    /*border: solid #ccc 1px;*/
    border-radius: 6px;
    border-left:0px;
}
.table-curved td, .table-curved th {
    /*border-left: 1px solid #ccc;
    border-top: 1px solid #ccc;*/
}
.table-curved th {
    border-top: none;
}
.table-curved th:first-child {
    border-radius: 6px 0 0 0;
}
.table-curved th:last-child {
    border-radius: 0 6px 0 0;
}
.table-curved th:only-child{
    border-radius: 6px 6px 0 0;
}
.table-curved tr:last-child td:first-child {
    border-radius: 0 0 0 6px;
}
.table-curved tr:last-child td:last-child {
    border-radius: 0 0 6px 0;
}

